--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -165,4 +165,78 @@ A coisa mais importante que você pode fazer para aumentar a segurança IPv6 da 
 
 Fontes: [avg](https://www.avg.com/pt/signal/ipv4-vs-ipv6), [hostone](https://blog.hostone.com.br/protocolo-ipv4-ipv6/), [eletronet](https://www.eletronet.com/blog/entenda-as-diferencas-entre-ipv4-e-ipv6/) e [dltec](http://www.dltec.com.br/blog/redes/diferencas-entre-ipv4-e-ipv6/)
 
----------------------------
+### 2. TCP e UDP
+
+TCP e UDP são protocolos que determinam como os dados são trocados pela Internet. Ambos construídos sobre o protocolo IP, eles compartilham muitas semelhanças, mas a diferença entre TCP e UDP os tornam adequados para finalidades diferentes. Eles são os dois protocolos mais amplamente usados com os quais os usuários da Internet e empresas interagem diariamente.
+
+#### **TCP**
+
+O protocolo de controle de transmissão (TCP) é orientado à conexão, o que significa que, uma vez que a conexão foi estabelecida, os dados podem ser transmitidos em duas direções. Ele tem sistemas integrados para verificar se há erros e garantir que os dados sejam entregues na ordem em que foram enviados, tornando-o o protocolo perfeito para a transferência de informações como imagens estáticas, arquivos de dados e páginas da web.
+
+**Como funciona?**
+
+Quando você solicita uma página da web em seu navegador, seu computador envia pacotes TCP para o endereço do servidor da web, solicitando que ele envie a página da web de volta para você. O servidor da web responde enviando um fluxo de pacotes TCP, que o seu navegador da web une para formar a página da web. Quando você clica em um link, entra, posta um comentário ou faz qualquer outra coisa, seu navegador da web envia pacotes TCP para o servidor e o servidor envia pacotes TCP de volta.
+
+O TCP tem tudo a ver com confiabilidade — os pacotes enviados com TCP são rastreados para que nenhum dado seja perdido ou corrompido em trânsito. É por isso que os downloads de arquivos não são corrompidos, mesmo se houver problemas na rede. Claro, se o destinatário estiver offline, seu computador desistirá e você verá uma mensagem de erro dizendo que ele não pode se comunicar com o host remoto.
+
+![tcp](../pics/tcp.png)
+
+Handshake TCP de 3 tempos:
+
+Handshal permite a uatenticação e o encerramento de uma conexão completa:
+
+1. O  **cliente** **enviará** ao **servidor** uma solicitação "**SYN**", "pedindo" o estabelecimento de uma conexão.
+2. Uma vez que o **servidor** tenha **processado** a resposta, uma resposta "**SYN-ACK**" será **enviada** de **volta** ao **cliente**, reconhecendo que foi recebida.
+3. O **cliente responde** com um "**ACK**" e, uma vez recebido pelo servidor, a comunicação é estabelecida.
+
+#### UDP
+
+O User Datagram Protocol (UDP) é um protocolo de Internet mais simples e sem conexão, no qual os serviços de verificação e recuperação de erros não são necessários. Com o UDP, não há sobrecarga para abrir, manter ou encerrar uma conexão — os dados são continuamente enviados para o destinatário, quer ele os receba ou não.
+
+No UPD temos:
+
+- **Porta de origem**: Neste campo é armazenado qual a porta de origem do pacote o que permite receber uma resposta, como uma consulta DNS. Este campo possui 16 bits de tamanho.
+- **Porta de destino**: Neste campo fica armazenado qual a porta o pacote será enviado assim que for entregue à máquina especifica. Quando for entregue, ele será tratado pela aplicação que estará funcionando na mesma. Este campo possui um tamanho de 16 bits.
+- **Comprimento da mensagem**: Este é um campo que especifica o comprimento em bytes do cabeçalho UDP mais os dados carregados. O tamanho mínimo é de 8 bytes devido ao comprimento do cabeçalho. O tamanho máximo possível para um datagrama UDP é de 65.507 bytes (65.535 − 8 bytes do cabeçalho UDP − 20 bytes do cabeçalho IP), devido ao protocolo IPv4. Em IPv6 é possível termos pacotes de tamanho maior do que 65.535.
+- **Checksum**: Pode ser usado para verificação de erros do cabeçalho e dos dados transmitidos. É opcional em IPv4 e mandatório em IPv6. Se não for usado, deverá ser preenchido com zeros.
+
+>UDP simplesmente envia os pacotes. Não quer saber se foi recebido ou não.
+
+**Como funciona?**
+
+O protocolo UDP funciona de forma semelhante ao TCP, mas elimina todo o material de verificação de erros. Toda a comunicação de ida e volta introduz latência, tornando as coisas mais lentas.
+
+Quando um aplicativo usa UDP, os pacotes são enviados apenas para o destinatário. O remetente não espera para ter certeza de que o destinatário recebeu o pacote. Se o destinatário perder alguns pacotes UDP aqui e ali, o remetente não os reenviará. Perder toda essa sobrecarga significa que os dispositivos podem se comunicar mais rapidamente.
+
+UDP é usado quando a velocidade é desejável e a correção de erros não é necessária. Por exemplo, ele é frequentemente usado para transmissões ao vivo e jogos online. Digamos que você esteja assistindo a um stream de vídeo ao vivo, que geralmente é transmitido usando UDP em vez de TCP. O servidor apenas envia um fluxo constante de pacotes UDP para os computadores que estão assistindo.
+
+Se você perder a conexão por alguns segundos, o vídeo pode congelar ou ficar trêmulo por um momento e, em seguida, pular para o trecho atual da transmissão. Se ocorrer uma pequena perda de pacote, o vídeo ou áudio pode ficar distorcido por um momento, pois o vídeo continua a ser reproduzido sem os dados ausentes.
+
+![udp](../pics/udp.png)
+
+#### Quando usar TCP ou UDP?
+
+Os serviços que exigem que um cliente e um servidor enviem pacotes simultaneamente funcionam melhor com o TCP, pois ajuda a ativar a largura de banda total da rede. Use o TCP quando um pequeno atraso estiver bom e você precisar se concentrar na confiabilidade em vez da velocidade. Exemplos de aplicativos que usam TCP são o Instagram e a maioria dos serviços de e-mail . Serviços de vídeo como Netflix e YouTube também o utilizam para manter a integridade dos dados.
+
+O UDP é melhor quando o cliente e o servidor enviam pacotes independentemente e os aplicativos são sensíveis ao tempo. Como não há atrasos de retransmissão, funciona bem para (a maioria) jogos de RPG, bem como para serviços de DNS e VOIP como o Zoom, que exigem velocidades rápidas.
+
+Alguns serviços combinam os dois protocolos para uma solução rápida e confiável. Por exemplo, o Skype usa TCP para sinalização e UDP/TCP para transporte de tráfego.
+
+#### Resumo
+
+| | |
+---|---|
+|TCP |TCP é um protocolo orientado à conexão e fornece a comunicação confiável com vários recursos.|
+|UDP |UDP é um protocolo de transporte em tempo real sem conexão, que oferece um processo de comunicação mais rápido, mas com pouca confiabilidade|
+
+| | TCP| UDP|
+--|--|--|
+|Conexão | Orientado à conexão — O dispositivo deve estabelecer uma conexão antes de transmitir dados e fechar a conexão após a transmissão(conecta - verifica se o destino tá online - envia os pacotes - termina de enviar os pacotes - finaliza a conexão).| Sem conexão(normalmente usado em transmissões de Broadcast)
+|Confiabilidade |Confiável — A entrega do pacote de dados é garantida. TCP pode recuperar pacotes perdidos, eliminar pacotes duplicados, recuperar dados corrompidos e recuperar a ligação em caso de problemas no sistema e na rede| Não confiável, as mensagens enviadas podem não alcançar o destino.|
+|Transmissão | Full duplex, é possível a transferência simultânea em ambas direções(cliente-servidor) durante toda a sessão, toda comunicação.|
+|Tipo de informação de comunicação| Stateful — O cliente e o servidor mantem as informações sobre a sessão.| Stateless — O servidor não mantém nenhuma informação sobre a sessão. |
+|Sequência | Todos os pacotes são encaminhados ao destinatário de forma ordenada, mas não significa que irá chegar de forma ordenada, por conta das rotas, latencia... O ponto final, precisa organizar todos esses pacotes.| Não há ordenação dos segmentos, se chegarem fora de ordem, não serão reordenados.|
+|Fluxo| O receptor, a medida que recebe os dados, envia mensagens ACK, confima a recepção de um segmento, dado, como funcionalidade extra.| Não há confirmação de recpeção dos segmentos|
+|Aplicação | Navegação na web. Transferência de arquivo. E-mail (SMTP, IMAP/POP)| VPN. Streaming de vídeo e música. Jogos online, jogos multiplayer. Transmissões ao vivo e videoconferência. Consultas de sistema de nome de domínio (DNS). Voz sobre IP (VoIP).|
+
+Fonte: [gaea](https://gaea.com.br/diferenca-entre-tcp-e-udp/), [privateinternetaccess](https://www.privateinternetaccess.com/blog/tcp-vs-udp-understanding-the-difference/)
