--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -13,7 +13,8 @@ Protocolos de Rede (TCP, UDP, RTP, DCCP, SCTP, SSH, NNTP etc);
 - [Tipos de protocolos de rede](#tipos-de-protocolos-de-rede)
 - [1. IP](#1-ip)
 - [2. TCP e UDP](#2-tcp-e-udp)
-- [2. IPSec](#3-ipsec)
+- [3. IPSec](#3-ipsec)
+- [4. ICMP](#4-icmp)
 
 ### O que são procotocolos de rede e para que servem?
 
@@ -270,3 +271,95 @@ O IPsec pode ser usado para o seguinte:
 As organizações usam o IPSec para se proteger contra ataques de reprodução. O ataque de reprodução, ou “ataque man-in-the-middle”, corresponde ao ato de interceptar e alterar uma transmissão em andamento, roteando dados para um computador intermediário. O protocolo IPSec atribui um número sequencial a cada pacote de dados e realiza verificações para detectar sinais de pacotes duplicados.
 
 Fonte: [ufrj](https://www.gta.ufrj.br/ensino/eel878/redes1-2016-1/16_1_2/vpn/vpn_ipsec2/vpn_ipsec/ipsec.html) e [aws](https://aws.amazon.com/pt/what-is/ipsec/)
+
+### 4. ICMP
+
+ICMP ( Internet Control Message Protocol ) é um protocolo que os dispositivos de rede (por exemplo, roteadores) usam para gerar mensagens de erro quando problemas de rede impedem a passagem de pacotes IP.
+
+> ICMP pode ser usado para relatar e debugar esses erros.
+
+O protocolo ICMP notifica o remetente se os dados não forem recebidos pelo destinatário ou recebidos na ordem errada. Assim, o ICMP é um protocolo para comunicar informações sobre dados, mas não gerencia os dados em si.
+
+Por exemplo, um remetente pode querer enviar uma mensagem para um determinado destino, mas o roteador não pode fazê-lo. Nesse caso, o roteador informa ao remetente que a mensagem não pode ser entregue a esse destino.
+
+#### Objetivo
+
+Embora a camada de Rede(modelo OSI) não deva se preocupar com a garantia de conexão, o ICMP fornece feedback sobre as comunicações quando as coisas dão errado . Portanto, mesmo se você usar o [UDP](#udp), que possui um modelo de comunicação sem conexão , ainda é possível descobrir por que uma transmissão falhou. Todos os dispositivos conectados à rede podem processar mensagens ICMP, incluindo roteadores e dispositivos terminais. O ICMP foi adaptado para funcionar com o IPv6 tão bem quanto ao IPv4.
+
+Mas vale lembrar que o ICMP não tem a necessidade de obter recursos da camanda de transporte ( TCP ou UDP ), portanto ele é considerado como **”connectionless”** fazendo com que não há necessidade de abrir conexão para enviar a mensagem.
+
+#### Mensagens
+
+As mensagens ICMP são transmitidas em datagramas IP e divididas em duas categorias:
+
+- Mensagem de Error-reporting ou mensagem de erro
+- Mensagem de consulta/informação
+
+1. **Mensagem de erro**:
+A mensagem de relatório de erro indica que, quando o roteador encontrar um problema durante o processamento de um pacote IP, ele enviará uma mensagem. Usadas para informar a um dispositivo transmissor que um erro ocorreu durante a transmissão do datagrama. Geralmente os erros são relacionados à estrutura do datagrama em si, ou problemas encontrados durante o tráfego dos pacotes através da rede.
+
+2. **Mensagem de consulta**:
+São mensagens que permitem aos dispositivos trocarem informações entre si e realizarem determinados tipos de testes e diagnósticos. As mensagens de consulta são aquelas que ajudam o host a obter informações específicas de outro host. Digamos que haja um cliente e um servidor e o cliente queira saber se o servidor está funcionando. Ele envia uma mensagem ICMP ao servidor para descobrir.
+
+**Formato da mensagem ICMP**
+
+![msn icmp](../pics/icmp-message-format.webp)
+
+| | |
+--|--|
+|Type| Especifica o tipo de mensagem ICMP|
+|Code| Especifica o subtipo da mensagem ICMP|
+|Checksum| Determina se a mensagem contém ou não um erro|
+|Data| No contexto das mensagens de erro, o pacote contém as informações completas do pacote nesta seção.|
+
+##### Tipos de mensagens
+
+Como vimos as mensagens ICMP são geralmente divididas em duas categorias:
+
+| |  |  | | |
+--|--|--|--| --|
+|Categoria| Tipo | Mensagem| Descrição| Code |
+|Mensagem de erro | 3| Destino Inacessível| Quando um pacote falha em alcançar seu destino pretendido| 0 - 15|
+|Mensagem de erro | 4 | Source Quench|  Para cada datagrama descartado devido ao congestionamento da camada de rede, o roteador envia uma mensagem source-quench.| 0|
+|Mensagem de erro | 11 | Tempo excedido| Quando um pacote é enviado de uma camada com 1500 unidades para uma camada com 300 unidades, o pacote é fragmentado; esse processo é conhecido como fragmentação. Essas 1.500 unidades são divididas em cinco fragmentos, f1, f2, f3, f4 e f5, que chegam ao destino em ordem. Será descartado todos os fragmentos recebidos e enviado uma mensagem de tempo excedido para a fonte original se todos os fragmentos não chegarem ao destino dentro de um determinado período de tempo.| 0 ou 1|
+|Mensagem de erro | 12 | Problemas de Parâmetros | Uma mensagem de problema de parâmetro pode ser enviada pelo roteador e pelo host de destino. Esta mensagem indica que alguns parâmetros foram configurados incorretamente.| 0 ou 1|
+|Mensagem de consulta | 8 ou 0 | echo-request(8) ou replay(0) |Uma mensagem echo-request pode ser enviada por um roteador ou host. É usado para enviar uma mensagem "Você está vivo?" para outro host. Se o outro host ainda estiver ativo, a mensagem de echo-replay será enviada. O roteador ou o host que recebe uma mensagem de echo-request envia uma mensagem de echo-replay. | 0|
+|Mensagem de consulta |13 ou 14 | Timestamp request(13) or replay(14) |Pode ser usado para calcular o tempo de ida e volta entre a origem e o destino, mesmo que os relógios não estejam sincronizados.|0|
+
+> echo/eco é a mesma coisa que PING
+
+#### Ataques ICMP
+
+<aside>
+💡
+Os agentes de ameaças usam pacotes de eco (pings) do protocolo de mensagens de controle da Internet (ICMP) para descobrir sub-redes e hosts em uma rede protegida, para gerar ataques de inundação DoS e para alterar as tabelas de roteamento de host.
+</aside>
+
+Os atores da ameaça usam o ICMP para reconhecimento e ataques de varredura. Eles podem lançar ataques de coleta de informações para mapear uma topologia de rede, descobrir quais hosts estão ativos (acessíveis), identificar o sistema operacional do host (impressão digital do sistema operacional) e determinar o estado de um firewall. Os agentes de ameaças também usam ICMP para ataques DoS.
+
+Os analistas de segurança devem ser capazes de detectar ataques relacionados ao ICMP observando o tráfego capturado e os arquivos de log. No caso de grandes redes, dispositivos de segurança como firewalls e sistemas de detecção de intrusão (IDS) detectam tais ataques e geram alertas para os analistas de segurança.
+
+| | |
+--|--|
+Mensagens ICMP usadas por hackers|Descrição
+Solicitação de eco ICMP e resposta de eco| Isso é usado para realizar verificação de host e ataques DoS.
+ICMP inacessível| Isso é usado para realizar o reconhecimento de rede e ataques de varredura.
+Resposta de máscara ICMP| Isso é usado para mapear uma rede IP interna.
+Redirecionamentos ICMP| Isso é usado para atrair um host alvo para enviar todo o tráfego através de um dispositivo comprometido e criar um ataque MITM.
+Descoberta de roteador ICMP| Isso é usado para injetar entradas de rota falsas na tabela de roteamento de um host de destino.
+
+> Solicitações de eco e resposta de eco = echo-request e echo-replay
+
+**Ataque de inundação PING**
+Uma inundação ping é um ataque de negação de serviço no qual o invasor tenta sobrecarregar um dispositivo visado com pacotes de solicitação de eco ICMP, fazendo com que o alvo se torne inacessível para o tráfego normal. Quando o tráfego de ataque se origina em vários dispositivos, o ataque torna-se um DDoS ou ataque Distribuído de Negação de Serviço.
+
+A forma DDoS de uma inundação Ping (ICMP) pode ser dividida em duas etapas que se repetem:
+
+1. O invasor envia muitos pacotes de solicitação de eco ICMP para o servidor visado usando vários dispositivos.
+2. O servidor visado então envia um pacote de resposta de eco ICMP para cada endereço de IP do dispositivo solicitante como resposta.
+
+![ping icmp](../pics/ping-icmp-flood-ddos-attack-diagram.webp)
+
+Mais ataques: [CNNA-Network](https://ccna.network/vulnerabilidades-ameacas-ip/), [UFRJ](https://www.gta.ufrj.br/grad/13_1/dos/ataques.html)
+
+Fonte: [bosontreinamentos](http://www.bosontreinamentos.com.br/redes-computadores/curso-de-redes-protocolo-icmp-internet-control-message-protocol/), [data-flair](https://data-flair.training/blogs/icmp-protocol/), [CNNA-Network](https://ccna.network/vulnerabilidades-ameacas-ip/) e [cloudflare](https://www.cloudflare.com/pt-br/learning/ddos/ping-icmp-flood-ddos-attack/)
