--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -330,10 +330,11 @@ Como vimos as mensagens ICMP são geralmente divididas em duas categorias:
 
 #### Ataques ICMP
 
-<aside>
+<pre>
 💡
-Os agentes de ameaças usam pacotes de eco (pings) do protocolo de mensagens de controle da Internet (ICMP) para descobrir sub-redes e hosts em uma rede protegida, para gerar ataques de inundação DoS e para alterar as tabelas de roteamento de host.
-</aside>
+Os agentes de ameaças usam pacotes de eco (pings) do protocolo de mensagens de controle da Internet (ICMP) para</br>descobrir sub-redes e hosts em uma redeprotegida, para gerar ataques de inundação DoS e para alterar </br>as tabelas de roteamento de host.
+    
+</pre>
 
 Os atores da ameaça usam o ICMP para reconhecimento e ataques de varredura. Eles podem lançar ataques de coleta de informações para mapear uma topologia de rede, descobrir quais hosts estão ativos (acessíveis), identificar o sistema operacional do host (impressão digital do sistema operacional) e determinar o estado de um firewall. Os agentes de ameaças também usam ICMP para ataques DoS.
 
