--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -5,9 +5,9 @@
 
 ## 1. Protocolos de rede
 
-```aside
+<pre>
 Protocolos de Rede (TCP, UDP, RTP, DCCP, SCTP, SSH, NNTP etc);
-```
+</pre>
 
 - [O que são procotocolos de rede e para que servem?](#o-que-são-procotocolos-de-rede-e-para-que-servem)
 - [Tipos de protocolos de rede](#tipos-de-protocolos-de-rede)
