ICMP - Laboratório prático

--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -361,6 +361,11 @@ A forma DDoS de uma inundação Ping (ICMP) pode ser dividida em duas etapas que
 
 ![ping icmp](../pics/ping-icmp-flood-ddos-attack-diagram.webp)
 
-Mais ataques: [CNNA-Network](https://ccna.network/vulnerabilidades-ameacas-ip/), [UFRJ](https://www.gta.ufrj.br/grad/13_1/dos/ataques.html)
+Mais ataques: [CNNA-Network](https://ccna.network/vulnerabilidades-ameacas-ip/), [UFRJ](https://www.gta.ufrj.br/grad/13_1/dos/ataques.html), [comparitech](https://www.comparitech.com/net-admin/what-is-icmp/), [infosecinstitute](https://resources.infosecinstitute.com/topic/icmp-attacks/)
+
+#### Laboratório prático
+
+- [sgoncalves - Nmap e Ping Sweep](https://sgoncalves.tec.br/nmap-e-ping-sweep/)
+- [Laboratório Wireshark ARP/ICMP](https://docplayer.com.br/20166738-Laboratorio-wireshark-arp-icmp-1.html)
 
 Fonte: [bosontreinamentos](http://www.bosontreinamentos.com.br/redes-computadores/curso-de-redes-protocolo-icmp-internet-control-message-protocol/), [data-flair](https://data-flair.training/blogs/icmp-protocol/), [CNNA-Network](https://ccna.network/vulnerabilidades-ameacas-ip/) e [cloudflare](https://www.cloudflare.com/pt-br/learning/ddos/ping-icmp-flood-ddos-attack/)
