--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -15,6 +15,7 @@ Protocolos de Rede (TCP, UDP, RTP, DCCP, SCTP, SSH, NNTP etc);
 - [2. TCP e UDP](#2-tcp-e-udp)
 - [3. IPSec](#3-ipsec)
 - [4. ICMP](#4-icmp)
+- [5. DNS](#5-dns)
 
 ### O que são procotocolos de rede e para que servem?
 
@@ -369,3 +370,84 @@ Mais ataques: [CNNA-Network](https://ccna.network/vulnerabilidades-ameacas-ip/),
 - [Laboratório Wireshark ARP/ICMP](https://docplayer.com.br/20166738-Laboratorio-wireshark-arp-icmp-1.html)
 
 Fonte: [bosontreinamentos](http://www.bosontreinamentos.com.br/redes-computadores/curso-de-redes-protocolo-icmp-internet-control-message-protocol/), [data-flair](https://data-flair.training/blogs/icmp-protocol/), [CNNA-Network](https://ccna.network/vulnerabilidades-ameacas-ip/) e [cloudflare](https://www.cloudflare.com/pt-br/learning/ddos/ping-icmp-flood-ddos-attack/)
+
+### 5. DNS
+
+**O que é o DNS?**
+
+O DNS (Domain Name System – Sistema de nome de domínio) converte nomes de domínio legíveis por humanos (por exemplo, www.amazon.com) em endereços IP legíveis por máquina (por exemplo, 192.0.2.44).
+
+Como vimos DNS significa Domain Name System, ou sistema de nomes de domínios, e contém o registro de todos os domínios da internet. A sua função não é hospedar sites ou aplicações que criamos, mas sim permitir que as requisições cheguem aos locais corretos.
+
+Um servidor DNS é feito única e exclusivamente para a tradução de domínios para endereços de IP, então vamos entender como os servidores DNS podem realizar a sua tarefa e como são passadas as requisições para ele.
+
+**Para que serve o DNS na rede e como ele funciona?**
+
+Para entender como o DNS funciona, é importante aprender algumas definições primeiro:
+
+- **Resolvedor de DNS recursivo**: Um resolvedor de DNS recursivo é o servidor DNS que processa a solicitação inicial e se conecta à autoridade de nível superior para obter detalhes do domínio estabelecido.
+- **Servidor de nomes autorizado**: também conhecido como servidor raiz, é um conjunto de servidores estabelecidos que fornecem uma lista autorizada de domínios.
+- **Domínio de nível superior(TLD)**: o domínio de nível superior contém o sufixo de um nome de domínio, como .com, .org e .net.
+- **Servidor de nomes**: a parte de um servidor que contém os registros de nomes de domínio e seus respectivos endereços IP, semelhante a um catálogo de endereços.
+
+Quando escrevemos uma URL no navegador, como alura.com.br, o nosso computador não sabe como se conectar com o site da Alura, mas ele conhece alguém que sabe: o servidor DNS. Então, ele manda uma requisição pedindo para o DNS responder com o endereço IP do site.
+
+Agora, quando essa requisição chegar no servidor DNS, ele tem que agir rápido. Para isso, mantém-se um cache, ou uma cópia da informação, em memória RAM e vão primeiro olhar o cache para ver se tem uma resposta. Por exemplo, se eu acabei de acessar www.alura.com.br, ele não precisa fazer uma requisição para um Servidor raiz buscar o IP do www.alura.com.br
+
+Se não encontrar, têm que fazer uma requisição para um Servidor raiz, um servidor parecido com o DNS, que guarda informações de outros servidores e que irá responder com um endereço de um servidor de domínio de nível superior, ou servidor TLD.
+
+O servidor TLD é o servidor responsável por guardar informações da última parte da ULR, o .com, .net, .org e assim por diante, sendo um servidor para cada, e a tarefa dele é responder a última requisição com o endereço do servidor DNS autoritativo(por exemplo Amazon Route 53).
+
+Por último, o servidor DNS autoritativo, que conhece o endereço de onde o site está hospedado, responde o servidor DNS com o endereço, e assim o DNS pode te responder com o endereço IP.
+
+![DNS](../pics/how-route-53-routes-traffic.8d313c7da075c3c7303aaef32e89b5d0b7885e7c.png)
+
+>na imagem www.example.com = www.alura.com.br
+
+**O que é resolvedor DNS?** Em resumo, o resolvedor DNS é um servidor que converte nomes de domínio e endereços de IP. Sem ele, seu site não poderia ser acessado.
+Pense neste resolvedor DNS como um bibliotecário a tentar encontrar um livro para si na biblioteca.
+
+**O que DNS autoritativo?** DNS autoritativo funcionam como um registro geral da web onde ficam armazenados os IPs (e outros dados DNS) correspondentes a cada nome. Assim, o DNS autoritativo recebe este nome porque tem autoridade final sobre cada domínio. Esses domínios são organizados em estrutura hierárquica, em forma de árvore como no exemplo abaixo:
+
+![DNS](../pics/dns4.svg)
+
+#### Registro de Recursos(RR)
+
+Os servidores DNS possuem bancos de dados da forma: Type, Name, Value, TTL, conhecidos como registros de recursos (RRs).
+
+- **Type** define o tipo de consulta que será feita ao servidor.
+- **Name** corresponde ao domínio
+- **Value** ao respectivo endereço IP
+- **TTL**, o tempo que o registro será mantido no cache do servidor.
+(Kurose, 2016)
+
+Nenhum servidor possui registros de todos os domínios na Internet, pois o sistema funciona de forma hierarquica e distribuída, de modo que seja escalável nas infraestruturas de redes, além de possibilitar um funcionamento contínuo da rede mesmo que alguns servidores DNS deixem de funcionar.
+
+| | | | |
+|--|--|--|--|
+|Type|Name|Value|Example|
+|A|é o nome do computador(hostname)|é o endereço IP|relay.bar.foo.com, 145.37..93.126, A
+|CNAME|é um “apelido” para algum nome “canônico” (o nome real) www.ibm.com é realmente servereast.backup2.ibm.com|é o nome canônico|oo.com, relay.bar.foo.com, CNAME
+|NS|é um domínio (ex.:foo.com)|é o endereço IP do servidor de nomes autorizados para este domínio|foo.com, dns.foo.com, NS|
+|MX| | é o nome do servidor de correio associado com *name*| foo.com, mail.foo.com, MX|
+
+![dns rr](../pics/dns-rr.png)
+
+#### Pontos importantes
+
+O servidor DNS pode sempre ver quais sites você está acessando, mas nunca o conteúdo que você está acessando, e sabe exatamente qual é o seu endereço IP, já que tem que fazer uma resposta a sua requisição. Isso ocorre em redes privadas, como da sua casa, em uma rede pública, como de restaurante ou shopping, ou através de VPNs ou túneis SSH.
+
+Sendo assim, é importante escolher um DNS que não irá fazer a venda dessas informações ou armazená-las.
+
+#### Ataques DNS
+
+- [HIJACKING](https://www.gta.ufrj.br/ensino/eel878/redes1-2019-1/vf/dns/hijacking.html)
+- [SPOOFING](https://www.gta.ufrj.br/ensino/eel878/redes1-2019-1/vf/dns/spoofing.html)
+- [SUBDOMAIN](https://www.gta.ufrj.br/ensino/eel878/redes1-2019-1/vf/dns/subdomain.html)
+- [Flood Attacks](https://www.gta.ufrj.br/ensino/eel878/redes1-2019-1/vf/dns/flood-attack.html)
+- [Tunneling](https://www.gta.ufrj.br/ensino/eel878/redes1-2019-1/vf/dns/tunneling.html)
+- [Cache Poisoning](https://www.gta.ufrj.br/ensino/eel878/redes1-2019-1/vf/dns/cache-poisoning.html)
+
+Se você estiver com pressa, veja pelo menos o ataque de "Cache Poisoning".
+
+Fonte: [Alura](https://www.alura.com.br/artigos/dns-o-que-e-qual-escolher), [AWS](https://aws.amazon.com/pt/route53/what-is-dns/), [UFRJ](https://www.gta.ufrj.br/ensino/eel878/redes1-2019-1/vf/dns/introduction.html) e [Oracle](https://www.oracle.com/br/cloud/networking/dns/what-is-dns/)
