--- a/redes/redes-iniciante/parte1/0.menu.md
+++ b/redes/redes-iniciante/parte1/0.menu.md
@@ -2,3 +2,5 @@
 
 1. [Protocolos de rede](/redes/redes-iniciante/parte1/1.protocolosDeRede.md)
 2. [Modelo OSI](/redes/redes-iniciante/parte1/2.modelosOSI.md)
+
+Lab: [Linux e redes → Introddutório](../../exercicios/linuxRedes.md)
