--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -16,6 +16,7 @@ Protocolos de Rede (TCP, UDP, RTP, DCCP, SCTP, SSH, NNTP etc);
 - [3. IPSec](#3-ipsec)
 - [4. ICMP](#4-icmp)
 - [5. DNS](#5-dns)
+- [6. Telnet](#6-telnet)
 
 ### O que são procotocolos de rede e para que servem?
 
@@ -451,3 +452,41 @@ Sendo assim, é importante escolher um DNS que não irá fazer a venda dessas in
 Se você estiver com pressa, veja pelo menos o ataque de "Cache Poisoning".
 
 Fonte: [Alura](https://www.alura.com.br/artigos/dns-o-que-e-qual-escolher), [AWS](https://aws.amazon.com/pt/route53/what-is-dns/), [UFRJ](https://www.gta.ufrj.br/ensino/eel878/redes1-2019-1/vf/dns/introduction.html) e [Oracle](https://www.oracle.com/br/cloud/networking/dns/what-is-dns/)
+
+### 6. Telnet
+O Telnet é um protocolo que permiterealizar a conexão e administração remota, ou seja, com ele, é possível conectar-se a um computador que esteja distante.
+
+Você já viu um computador mexendo “sozinho”? Essa pergunta pode soar engraçada e realmente é, porém, talvez você realmente já tenha visto um computador ligado sem nenhum ser humano ali e o ponteiro movendo-se e executando funções.
+
+Isso pode ser explicado de algumas formas, e uma das possibilidades é com o controle remoto, ou seja, tem alguém em algum lugar do mundo que se conectou àquela máquina para executar alguma função.
+
+O Telnet é um dos comandos que permite que uma pessoa que possa estar em qualquer lugar do mundo tenha acesso e consiga executar funções em um computador.
+
+O Telnet é frequentemente usado por administradores de rede para acessar e gerenciar dispositivos remotos. Um administrador de rede pode acessar o dispositivo por telnet para o endereço IP ou nome do host de um dispositivo remoto. O administrador da rede será apresentado a um terminal virtual que pode interagir com o host remoto. 
+
+#### Mas como isso é feito?
+
+Para usar o telnet, você deve ter um software (cliente Telnet) instalado. Em um dispositivo remoto, um servidor Telnet deve estar instalado e funcionando.
+
+Para conectar via telnet a um servidor, basta executar o comando “telnet <domínio/IP> <porta>”. Se nenhuma porta for indicada, será feita uma tentativa de conectar automaticamente à porta 23. 
+
+Exemplo: Digamos que o administrador de rede(cliente telnet), deseja acessar remotamente um roteador remoto(servidor telnet):
+```bash
+#telnet server-IP address
+telnet 38.76.11.19
+```
+Irá inserir usuário e senha.
+
+![telnet](../pics/6.telnet-ip-address.png)
+
+Feito isso o administrador agora pode gerenciar o dispositivo remoto do seu próprio computador. 
+
+#### Vulnerabilidade
+
+Embora o Telnet seja simples e fácil de usar, ele não é mais tão utilizado, especialmente em ambientes de produção. Isso ocorre porque o Telnet envia todos os dados em texto não criptografado, incluindo nomes de usuários e senhas! O Telnet só é usado se o SSH não estiver disponível no dispositivo, por exemplo, em algum equipamento Cisco mais antigo.
+
+Sem criptografia, as comunicações de dados podem ser lidas por qualquer pessoa que tenha acesso ao fluxo de pacotes de rede. 
+
+![telnet](../pics/6.Telnet_is_vulnerable_to_eavesdropping-2.webp)
+
+Fonte: [betrybe](https://blog.betrybe.com/tecnologia/comando-telnet/), [geek-university](https://geek-university.com/telnet-protocol/) e [academy](https://www.ssh.com/academy/ssh/telnet)
