--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -17,6 +17,7 @@ Protocolos de Rede (TCP, UDP, RTP, DCCP, SCTP, SSH, NNTP etc);
 - [4. ICMP](#4-icmp)
 - [5. DNS](#5-dns)
 - [6. Telnet](#6-telnet)
+- [7. SSH](#7-ssh)
 
 ### O que são procotocolos de rede e para que servem?
 
@@ -490,3 +491,46 @@ Sem criptografia, as comunicações de dados podem ser lidas por qualquer pessoa
 ![telnet](../pics/6.Telnet_is_vulnerable_to_eavesdropping-2.webp)
 
 Fonte: [betrybe](https://blog.betrybe.com/tecnologia/comando-telnet/), [geek-university](https://geek-university.com/telnet-protocol/) e [academy](https://www.ssh.com/academy/ssh/telnet)
+
+
+### 7. SSH
+
+**SSH** é a sigla para **Secure Socket Shell**, sendo um dos protocolos específicos de segurança de troca de arquivos entre cliente e servidor de internet, usando criptografia. O objetivo do SSH é permitir que desenvolvedores ou outros usuários realizem alterações em sites e servidores utilizando uma conexão simples e segura.
+
+#### O funcionamento do protocolo
+
+Na prática, o SSH fornece o mecanismo para que haja a autenticação desse usuário remoto, garantindo que essa pessoa tenha autorização para se comunicar com o servidor. Dessa maneira, é criada a conexão por meio do protocolo e as informações são transportadas nesse modelo de secure shell, com a criptografia que protege os dados.
+
+O SSH é acessado via terminal, independentemente do sistema operacional usado, e então é desenvolvida a criptografia que vai proteger as informações. Por meio da janela é feita a conexão com o servidor remoto, e então o processo se desenvolve.
+
+#### Tipos de criptografia do protocolo SSH
+
+| | | |
+|--|--|--|
+|Tipo| Descrição |
+|Simétrica|É a forma em que a criptografia utiliza uma chave secreta para codificar e decodificar  uma mensagem do cliente e do servidor. De forma efetiva, qualquer mensagem pode ser decodificada, assim como, ser transferida. |
+|Assimétrica |Ao contrário da criptografia simétrica, a criptografia assimétrica usa duas chaves separadas para criptografia e descriptografia. Essas duas chaves são conhecidas como chave-pública e chave-privada. Juntas, as chaves são conhecidas como pública-privada e formam um par de chaves |
+|Hashing|One-way hashing é mais uma forma de criptografia usada em conexões seguras de Shell. As funções do one-way-hash diferem das duas formas de criptografia acima mencionadas, no sentido de que elas nunca devem ser descriptografadas. Eles geram um valor exclusivo, um sentido único de comprimento fixo para cada entrada que não mostra nenhuma tendência clara que possa ser explorada. Isso torna praticamente impossível de ser feita a reversão. |
+
+#### Como acessar o protocolo SSH?
+
+| | | |
+|--|--|--|
+|Tipo| Como| Exemplo |
+|Com login e senha|Site |```$ ssh [username]@nomedosite.com.br```|
+|Com login e senha| IP |```$ ssh [username]@[server IP address]``` |
+|Usando chaves SSH |SSH key pair|```$ ssh-copy-id -i ~/.ssh/id_rsa.pub user@server``` |
+
+[SSH tutorial](https://github.com/foerstner-lab/SSH_tutorial/blob/master/SSH_tutorial.org), [Lab SSH](https://joelrivera.com/2020/04/05/lab-configure-ssh/), [AWS SSH](https://github.com/ravsau/aws-labs/blob/master/password-and-keyless-ssh.MD) e [Build Simple Lab](https://beginaws.awsstudygroup.com/2-vpc-setup/1-create-vpc/5-build-simple-lab/)
+
+
+<p>
+  <p>Sem SSH:</p>
+  <img src="../pics/7.before-ssh.webp" width="500px">
+
+  <p>Com SSH:</p>
+  <img src="../pics/7after-ssh.webp" width="500px">
+</p>
+
+
+Fonte: [Hostinger](https://www.hostinger.com.br/tutoriais/como-funciona-o-ssh), [rockcontent](https://rockcontent.com/br/blog/ssh/) e [resultadosdigitais](https://resultadosdigitais.com.br/marketing/ssh/)
