--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -6,7 +6,7 @@
 ## 1. Protocolos de rede
 
 <pre>
-Protocolos de Rede (TCP, UDP, RTP, DCCP, SCTP, SSH, NNTP etc);
+Protocolos de Rede (IP, SSH, TCP, UDP, RTP, DCCP, SCTP, SSH, NNTP etc);
 </pre>
 
 - [O que são procotocolos de rede e para que servem?](#o-que-são-procotocolos-de-rede-e-para-que-servem)
