--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -492,6 +492,15 @@ Sem criptografia, as comunicações de dados podem ser lidas por qualquer pessoa
 
 Fonte: [betrybe](https://blog.betrybe.com/tecnologia/comando-telnet/), [geek-university](https://geek-university.com/telnet-protocol/) e [academy](https://www.ssh.com/academy/ssh/telnet)
 
+| | |
+|--|--|
+|Resumo| -|
+|Terminal bidirecional| Envia comandos para o servidor, como ele apresentará erros, outras infos... Ou seja, comunicação dos dois lados.|
+|Terminal virtual | Apenas por texto, não possui atividade de utilização por mouse, por exemplo.|
+|Ainda muito utilizado na troca de info entre equipamento de rede| Por exemplo entre dois roteadores em uma rede local(lan)|
+|Não tem criptografia| Tudo que você digitar e enviar para servidor, vai em texto puro|
+|Para fazer conexão com servidor, colocamos usario e senha| e isso tbm é passado em texto puro|
+
 
 ### 7. SSH
 
@@ -508,9 +517,9 @@ O SSH é acessado via terminal, independentemente do sistema operacional usado, 
 | | | |
 |--|--|--|
 |Tipo| Descrição |
-|Simétrica|É a forma em que a criptografia utiliza uma chave secreta para codificar e decodificar  uma mensagem do cliente e do servidor. De forma efetiva, qualquer mensagem pode ser decodificada, assim como, ser transferida. |
-|Assimétrica |Ao contrário da criptografia simétrica, a criptografia assimétrica usa duas chaves separadas para criptografia e descriptografia. Essas duas chaves são conhecidas como chave-pública e chave-privada. Juntas, as chaves são conhecidas como pública-privada e formam um par de chaves |
-|Hashing|One-way hashing é mais uma forma de criptografia usada em conexões seguras de Shell. As funções do one-way-hash diferem das duas formas de criptografia acima mencionadas, no sentido de que elas nunca devem ser descriptografadas. Eles geram um valor exclusivo, um sentido único de comprimento fixo para cada entrada que não mostra nenhuma tendência clara que possa ser explorada. Isso torna praticamente impossível de ser feita a reversão. |
+|Simétrica|É a forma em que a criptografia utiliza uma chave secreta para codificar e decodificar  uma mensagem do cliente e do servidor. De forma efetiva, qualquer mensagem pode ser decodificada, assim como, ser transferida. ( a chave não é compartilhada com todos)|
+|Assimétrica |Ao contrário da criptografia simétrica, a criptografia assimétrica usa duas chaves separadas para criptografia e descriptografia. Essas duas chaves são conhecidas como chave-pública e chave-privada. Juntas, as chaves são conhecidas como pública-privada e formam um par de chaves.  A mensagem é criptografada pela chave-publica p/ todos(enviada de forma cifrada) e pela chave-privada é feita a descodificação(só quem tem consegue decodificar)  |
+|Hashing|One-way hashing é mais uma forma de criptografia usada em conexões seguras de Shell. As funções do one-way-hash diferem das duas formas de criptografia acima mencionadas, no sentido de que elas nunca devem ser descriptografadas. Eles geram um valor exclusivo, um sentido único de comprimento fixo para cada entrada que não mostra nenhuma tendência clara que possa ser explorada. Isso torna praticamente impossível de ser feita a reversão. [No hashing não acontece a decodificação] |
 
 #### Como acessar o protocolo SSH?
 
@@ -531,6 +540,15 @@ O SSH é acessado via terminal, independentemente do sistema operacional usado, 
   <p>Com SSH:</p>
   <img src="../pics/7after-ssh.webp" width="500px">
 </p>
+
+| | |
+|--|--|
+|Resumo| -|
+|Administração de servidores| por meio de terminais(cliente-servidor)|
+|Padrão | ssh [username]@0[host] = host ip ou dominio|
+|login| password ou senha de acesso ao servidor|
+|Criptografia| Simétrica, Assimétrica ou Hashing.|
+|Ferramentas cliente SSH| OpenSSH, SmarTTY, PuTTy e Terminal(nativo)|
 
 
 Fonte: [Hostinger](https://www.hostinger.com.br/tutoriais/como-funciona-o-ssh), [rockcontent](https://rockcontent.com/br/blog/ssh/) e [resultadosdigitais](https://resultadosdigitais.com.br/marketing/ssh/)
