--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -18,6 +18,7 @@ Protocolos de Rede (IP, SSH, TCP, UDP, RTP, DCCP, SCTP, SSH, NNTP etc);
 - [5. DNS](#5-dns)
 - [6. Telnet](#6-telnet)
 - [7. SSH](#7-ssh)
+- [8. FTP](#8-ftp)
 
 ### O que são procotocolos de rede e para que servem?
 
@@ -549,6 +550,63 @@ O SSH é acessado via terminal, independentemente do sistema operacional usado, 
 |login| password ou senha de acesso ao servidor|
 |Criptografia| Simétrica, Assimétrica ou Hashing.|
 |Ferramentas cliente SSH| OpenSSH, SmarTTY, PuTTy e Terminal(nativo)|
+|Porta| 22|
 
 
 Fonte: [Hostinger](https://www.hostinger.com.br/tutoriais/como-funciona-o-ssh), [rockcontent](https://rockcontent.com/br/blog/ssh/) e [resultadosdigitais](https://resultadosdigitais.com.br/marketing/ssh/)
+
+### 8. FTP
+
+<aside>
+💡
+#### O Que é FTP?
+
+O FTP (File Transfer Protocol) é usado para se comunicar e transferir
+arquivos(download, upload) entre computadores numa rede TCP/IP (Protocolo de Controle de Transmissão/Protocolo de Internet) — ou seja, na internet. Usuários que tiverem acesso a um servidor FTP (também conhecido como host/site FTP) podem receber e transferir arquivos através dele.
+
+</aside>
+
+De uma forma simplificada, ao fazer um upload de arquivos, dados são transferidos de um computador para um servidor. Já ao fazer um download, os arquivos são transferidos de um servidor para o seu computador pessoal. Isso pode ser feito através do FTP.
+
+#### Tipos de conexões FTP
+
+| | |
+|--|--|
+|Tipo| Descrição|
+|FTP| Não criptografado, porta padrão 21|
+|FTP anônimo| Alguns servidores FTP públicos acabam não exigindo credenciais para acessar os seus arquivos. Essa prática é comum dentro do que é chamado de “FTP anônimo”.|
+|FTP protegido por senha| Requer a autenticação para uso através de usuário e senha. Mesmo assim, o serviço não é criptografado ou seguro.
+|FTPS|É um extensão do protocolo FTP mais seguro. Critografado, é o tipo mais rápido. Protege os arquivos que estão sendo transmitido com TLS |
+|SFTP| O SFTP é um subconjunto do protocolo Secure Shell (SSH), executado na porta 22, comumente usado por administradores de TI para acessar sistemas e aplicativos remotos, mas incorpora um mecanismo para transferência segura de arquivos.|
+
+#### Como o protocolo FTP funciona?
+
+Basicamente, podemos dizer que o protocolo conecta duas máquinas, sendo que uma faz o papel do cliente, a outra do servidor, com dois vínculos TCP diferentes. 
+
+Cada uma delas opera conforme descrição abaixo:
+| | |
+|--|--|
+|Cliente (canal de comandos)|	Servidor (canal de dados)|
+|É o computador que solicita conexão para ter acesso ao conteúdo hospedado no servidor;Utiliza um programa para se conectar ao servidor e faz login com usuário e senha;Depois de ser autorizado, passa a fazer download ou upload de arquivos.| Computador com ambiente virtual que hospeda os dados e arquivos;Possui programas com a função de analisar e liberar a conexão de computadores externos;Autoriza o compartilhamento dos arquivos com o cliente que está fazendo a solicitação.|
+
+Os dois equipamentos precisam ter conexão com a internet ou com uma rede intranet para que o protocolo funcione, e existem dois modos de comando, o ativo e o passivo.
+
+A diferença entre eles está na liberdade de interação entre cliente e servidor, uma vez que:
+
+    > no modo ativo, apesar de o cliente estabelecer o canal de comandos, é o servidor que define o canal de dados que será utilizado;
+    > no modo passivo, o cliente consegue determinar ambos os canais de comunicação.  
+
+Geralmente, o modo passivo é utilizado quando o servidor é impedido de abrir o canal de dados, especialmente por bloqueios provenientes de Firewalls ou roteadores. Essa alternância de modos é feita pelo controle de portas.
+
+#### Tipos de porta FTP
+
+Duas portas FTP são utilizadas para permitir que dois computadores se conversem dentro de uma rede:
+
+    > Porta 21, destinada a comando e controle da conexão(autenticação);
+    > Porta 20, voltada ao transporte de dados(verificação do envio de dados foi finalizado ou não).
+
+
+
+![ftp](../pics/ftp.png)
+
+Fonte: [Controle](https://www.controle.net/faq/protocolo-ftp-para-que-serve-um-servidor-ftp), [Hostinger](https://www.hostinger.com.br/tutoriais/ftp-o-que-e-como-funciona) e [Tiflux](https://tiflux.com/blog/tipos-de-porta-e-protocolo-ftp/)
