--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -19,6 +19,7 @@ Protocolos de Rede (IP, SSH, TCP, UDP, RTP, DCCP, SCTP, SSH, NNTP etc);
 - [6. Telnet](#6-telnet)
 - [7. SSH](#7-ssh)
 - [8. FTP](#8-ftp)
+- [9. SSL/TLS](#9-ssltls)
 
 ### O que são procotocolos de rede e para que servem?
 
@@ -610,3 +611,29 @@ Duas portas FTP são utilizadas para permitir que dois computadores se conversem
 ![ftp](../pics/ftp.png)
 
 Fonte: [Controle](https://www.controle.net/faq/protocolo-ftp-para-que-serve-um-servidor-ftp), [Hostinger](https://www.hostinger.com.br/tutoriais/ftp-o-que-e-como-funciona) e [Tiflux](https://tiflux.com/blog/tipos-de-porta-e-protocolo-ftp/)
+
+## 9. SSl/TLS
+
+**SSL** significa Secure Sockets Layer e, em resumo, é a tecnologia padrão para manter uma conexão de internet segura e proteger todos os dados confidenciais que estão sendo enviados entre dois sistemas, impedindo que criminosos leiam e modifiquem qualquer informação transferida, incluindo possíveis dados pessoais. Os dois sistemas podem ser um servidor e um cliente (por exemplo, um site de compras e navegador) ou servidor para servidor (por exemplo, um aplicativo com informações de identificação pessoal ou com informações de folha de pagamento). 
+
+SSL garante que quaisquer dados transferidos entre usuários e sites ou entre dois sistemas permaneçam impossíveis de ler. Ele usa algoritmos de criptografia para embaralhar os dados em trânsito, impedindo que os hackers os leiam à medida que são enviados pela conexão. Esta informação pode ser qualquer coisa sensível ou pessoal que pode incluir números de cartão de crédito e outras informações financeiras, nomes e endereços. 
+
+**TLS** (Transport Layer Security) é apenas uma versão atualizada e mais segura do SSL, com opção de critografia ECC, RSA ou DSA.
+
+![ssl/tls](../pics/9.ssl%20tls.webp)
+
+#### Como funciona a criptografia SSL/TLS?
+
+O SSL/TLS usa criptografia assimétrica e simétrica para proteger a confidencialidade e a integridade dos dados em trânsito. A criptografia assimétrica é usada para estabelecer uma sessão segura entre um cliente e um servidor, e a criptografia simétrica é usada para trocar dados dentro da sessão segura. 
+
+#### Existem 3 casos onde ter um SSL/TLS é essencial
+
+| | |
+|--|--|
+|Quando é preciso de autenticação| Qualquer servidor pode se passar por seu servidor interceptando as informações sendo transmitidas no caminho. O SSL/TLS permite que você comprove a identidade do seu servidor para que os visitantes saibam que é autêntico|
+|Para garantir confiabilidade| Quem possui uma loja virtual ou algum site que solicita o uso de informações pessoais é importante criar um senso de segurança para que as pessoas se sintam confortáveis em fornecer seus dados. Um certificado SSL/TLS é uma maneira visível de dizer aos seus visitantes que seus dados vão estar seguros.|
+|Quando você precisa estar de acordo com os padrões da indústria| Em algumas indústrias, como de finanças, é necessário manter um padrão básico de segurança. Existem também algumas exigências do PCI (Payment Card Industry) para quem deseja aceitar pagamentos via cartão de crédito em seu site, e uma delas é a utilização de um certificado SSL/TLS.|
+
+É importante lembrar que o certificado SSL/TLS é válido para diversos dispositivos, o que o torna uma opção de segurança ainda mais versátil na era de dispositivos móveis. Os benefícios de ter um certificado SSL/TLS faz valer muito a pena o investimento.
+
+Fonte: [Web Security](https://www.websecurity.digicert.com/security-topics/what-is-ssl-tls-https) e [Hostinger](https://www.hostinger.com.br/tutoriais/o-que-e-ssl-tls-https)
