protocolo http e https

--- a/redes/redes-iniciante/parte1/1.protocolosDeRede.md
+++ b/redes/redes-iniciante/parte1/1.protocolosDeRede.md
@@ -20,6 +20,7 @@ Protocolos de Rede (IP, SSH, TCP, UDP, RTP, DCCP, SCTP, SSH, NNTP etc);
 - [7. SSH](#7-ssh)
 - [8. FTP](#8-ftp)
 - [9. SSL/TLS](#9-ssltls)
+- [10. HTTP/HTTPS](#10-httphttps)
 
 ### O que são procotocolos de rede e para que servem?
 
@@ -637,3 +638,58 @@ O SSL/TLS usa criptografia assimétrica e simétrica para proteger a confidencia
 É importante lembrar que o certificado SSL/TLS é válido para diversos dispositivos, o que o torna uma opção de segurança ainda mais versátil na era de dispositivos móveis. Os benefícios de ter um certificado SSL/TLS faz valer muito a pena o investimento.
 
 Fonte: [Web Security](https://www.websecurity.digicert.com/security-topics/what-is-ssl-tls-https) e [Hostinger](https://www.hostinger.com.br/tutoriais/o-que-e-ssl-tls-https)
+
+## 10. HTTP/HTTPS
+
+## Métodos HTTP:
+
+Protocolo de Transferência de Hipertexto(HTTP) é um protocolo usado dentro do modelo
+Client/Server é baseado em pedidos (requests) e respostas (responses).
+
+Ele é a forma em que o Cliente e o Servidor se comunicam.
+Pensando em uniformizar a comunicação entre servidores e clientes foram criados
+códigos e verbos que são usados por ambas as partes, e essas requisições são feitas em
+URLs que possuem uma estrutura específica.
+
+|   |  |   |
+|---|---|---|
+| protocolo| endereço do servidor |recurso|
+|http| www.nomedosite.com|/home|
+
+O método HTTP informa ao servidor que tipo de ação o usuário deseja realizar. Temos diferentes métodos HTTP. Eles são:
+
+|   |  | 
+|---|---|
+|Método| Ação|
+|GET| ler|
+|POST| criar|
+|PUT| subsituir|
+|PATCH| modificar|
+|DELETE| Excluir|
+
+**Analogia:**
+
+Digamos que você entrou no site http://www.comprasOnlineAnalogia.com.br
+
+- E no campo de busca você pesquisou por "Livros". Apareceu uma lista com todos os livros do site.
+Ao fazer isso, geralmente usamos o **GET**.
+
+- Agora você encontrou o livro que queria e comprou o livro. Nesse caso, geralmente usamos o **POST**.
+
+- Mas você percebeu que colocou o endereço errado e você deseja modificar o pedido. Nessa caso geralmente usamos o **PATCH**
+
+- Por algum motivo você não quer mais esse livro, você deseja cancelar o pedido. Nesse caso usamos o **DELETE**
+
+Fonte: [Reprograma](https://github.com/reprograma/ON15-TET-S8-API-I/blob/main/material/API%20GET.pdf)
+
+Quer se aprofundar mais? aqui tem uma explicação muito boa sobre [O que é HTTP, como funciona e qual a sua diferença para HTTP 2](https://igluonline.com/o-que-e-http-como-funciona-e-qual-a-sua-diferenca-para-http-2/) do André Lug.
+
+## HTTP x HTTPS
+
+Como vimos HTTP é usado para transferir dados do Cliente e o Servidor. O único problema com o HTTP é que as informações que passam entre o servidor e o navegador estão abertas para pessoas que possam querer fazer uso indevido delas.
+
+Com HTTPS, você adiciona uma camada de segurança a essa conexão para que ela não possa ser interceptada. Os dados que passam entre o servidor e o navegador são criptografados, convertidos em um código para ocultá-los daqueles que não estão autorizados a visualizá-los. 
+
+
+
+![HTTP e HTTPS](../pics/httpehttps.png)
