--- a/cursos/hackersDoBem/00fundamentos/m2a1.md
+++ b/cursos/hackersDoBem/00fundamentos/m2a1.md
@@ -62,3 +62,11 @@ Exemplo:
 <img width="348" alt="image" src="https://github.com/rayanepimentel/InfoSec-iniciante/assets/37915359/7d08c168-bb67-4ffe-802b-155d25fd0479">
 
   
+## Sistema Octal
+> exemplos: erros de jogos, erros de esgotamento de memórias...
+
+
+
+## Sistema hexadecimal
+> exemplos: novos numeros de ips
+
